test/npm/haxe/openfl/errors/IllegalOperationErrorTest.hx
package openfl.errors;


class IllegalOperationErrorTest { public static function __init__ () { Mocha.describe ("Haxe | IllegalOperationError", function () {
	
	
	Mocha.it ("new", function () {
		
		// TODO: Confirm functionality
		
		var illegalOperationError = new IllegalOperationError ();
		Assert.notEqual (illegalOperationError, null);
		
	});
	
	
}); }}